--- a/desk.html
+++ b/desk.html
@@ -26,6 +26,6 @@
     <br>
     <h4 class="btn btn-success" id="info"></h4>
     </center>
-    <script src="desk.css"></script>
+    <script src="desk.js"></script>
     </body>
     </html>
